# VAE-training-with-HF-example

./: .gitignore  pyproject.toml  readme.md  train.py  visualize.ipynb
outputs/: tsne.npy
