[tool.poetry]
name = "vae"
version = "0.1.0"
description = ""
authors = ["MilkClouds <milkclouds@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.0.1+cu118", source = "pytorch"}
torchvision = {version = "^0.15.2+cu118", source = "pytorch"}
torchaudio = {version = "^2.0.2+cu118", source = "pytorch"}
albumentations = "^1.3.1"
accelerate = "^0.20.3"
datasets = "^2.13.1"
diffusers = "^0.17.1"
matplotlib = "^3.7.1"
ipykernel = "^6.23.3"
tqdm = "^4.65.0"
jupyter = "^1.0.0"
wandb = "^0.15.4"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
